# syspro3

./: Makefile  README.docx  README.md  dirfile.txt  testsites  webcreator.sh
mycrawler/: CMakeLists.txt  Makefile  crawler_globals.h  dirfile.txt  lists.c  lists.h  main.c  mycrawler  requests.c  requests.h  util.c  util.h
mycrawler/myWWWcopy/site0/: page0_2969.html  page0_5851.html  page1_6942.html  page1_8884.html  page2_1090.html  page2_2022.html  page3_2501.html  page3_7838.html  page4_2049.html  page4_3537.html  page5_3098.html  page6_3292.html  page7_3902.html  page8_4227.html  page9_6504.html
mycrawler/myWWWcopy/site1/: page0_3363.html  page0_6983.html  page1_3598.html  page1_4713.html  page1_6434.html  page2_1436.html  page2_3095.html  page2_8235.html  page3_5838.html  page3_6449.html  page4_3242.html  page4_4542.html  page4_5169.html  page5_6612.html  page6_7737.html  page7_7610.html  page8_7725.html  page9_2019.html
mycrawler/myWWWcopy/site2/: page0_4383.html  page0_6685.html  page1_1602.html  page1_7313.html  page2_2730.html  page2_6137.html  page3_4043.html  page3_4537.html  page4_1523.html  page4_6028.html  page5_4311.html  page6_1436.html  page7_2110.html  page8_6097.html  page9_1692.html
mycrawler/myWWWcopy/site3/: page0_1650.html  page1_7571.html  page2_4650.html  page3_3910.html  page4_6565.html  page5_1209.html  page6_1726.html  page7_7873.html  page8_2946.html  page9_2902.html
mycrawler/myWWWcopy/site4/: page0_3378.html  page1_1393.html  page2_3550.html  page3_6330.html  page4_1987.html  page5_8690.html  page6_1871.html  page7_8581.html  (+2 more)
(+558 files in other folders)
